@@ -41,6 +41,12 @@ input[type="text"] {
     box-sizing: border-box;
 }
 
+textarea {
+    width: 100%;
+    height: 1.5em;
+    box-sizing: border-box;
+}
+
 table {
     width: 100%;
     border: none;
