@@ -31,7 +31,7 @@
         </select>
       </dd>
       <dt><label for="main-expression">Expression</label></dt>
-      <dd><input type="text" id="main-expression"></dd>
+      <dd><textarea id="main-expression"></textarea></dd>
     </dl>
   </div>
 </div>
@@ -55,7 +55,7 @@
         </select>
       </dd>
       <dt><label for="context-expression">Expression</label></dt>
-      <dd><input type="text" id="context-expression"></dd>
+      <dd><textarea id="context-expression"></textarea></dd>
     </dl>
   </div>
 </div>
